<resources>
    <string name="app_name">RevalApp</string>
    <string name="submit">Submit</string>
    <string name="enter_roll_no">Enter Roll NO:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">APPLY FOR REVAL</string>
    <string name="tab_text_2">CHECK STATUS</string>
    <string name="applicationFrag">APPLY</string>
    <string name="statusFrag">STATUS</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="enter_your_subject_name">Enter Subject Name</string>
    <string name="enter_your_subject_id">Enter Subject Code</string>
    <string name="enter_your_current_grade">Enter Your Current Grade</string>
    <string name = "RevalStatus">Re-Evaluation Status</string>
    <string name="applicatin_heading">Application For Re-Evaluation</string>
    <string name="choose_file">Choose File</string>
    <string name="application_for_re_evaluation">Application For Re-Evaluation</string>
    <string name="upload">Upload</string>
</resources>
